--- a/index.html
+++ b/index.html
@@ -73,10 +73,10 @@
   <h2>My Interests</h2>
   <p>Here are some other interests I have that I will continue to cultivate and enjoy! </p>
   <div class="grid-contain">
-    <div class="cardi"> <img src="./pictures/orchids.jpeg" alt="yellow orchid in planter" height="200" width="50"> Orchids </div> 
-   <div class="cardi"><img src="./pictures/baking.jpeg" alt="baked goods" height="200" width="50"> Baking</div>
-   <div class="cardi" ><img src="./pictures/yoga.jpg" alt="people doing yoga at beach" height="200" width="50"> Yoga</div>
-   <div class="cardi"><img src="./pictures/meditation.jpg" alt="drop of water on water" height="200" width="50"> Meditation</div>
+    <div class="cardi"> <img src="./pictures/orchids.jpeg" alt="yellow orchid in planter"> Orchids </div> 
+   <div class="cardi"><img src="./pictures/baking.jpeg" alt="baked goods"> Baking</div>
+   <div class="cardi" ><img src="./pictures/yoga.jpg" alt="people doing yoga at beach" > Yoga</div>
+   <div class="cardi"><img src="./pictures/meditation.jpg" alt="drop of water on water"> Meditation</div>
      </div>
 </div>
 </section>
